--- a/src/main/resources/config/application.yml
+++ b/src/main/resources/config/application.yml
@@ -186,5 +186,5 @@ jhipster:
 # https://www.jhipster.tech/common-application-properties/
 # ===================================================================
 
-application:
+clou:
   movement-topic:
